changes to banner and about us section

--- a/index.html
+++ b/index.html
@@ -21,7 +21,16 @@
         </div>
     </nav>
     <div class="banner-section">
-        <div class="writeup-one">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Temporibus officia sequi rerum quia eaque nulla.</div>
+        <div class="writeup-one">EXPLORE THE WORLD!!</div>
+    </div>
+    <div class="section-two">
+        <img src="./assests/images/pic-2.jpg">
+        <div class="section-two-writeup">
+            <h4>ABOUT US</h4>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quos quas modi dolore perspiciatis voluptatem excepturi dolor ex in! Ratione veniam, nobis pariatur numquam velit neque?
+            </p>
+            <button>Read more</button>
+        </div>
     </div>
 </body>
 </html>
