changes to the homepage
added forms , information and locations.

--- a/index.html
+++ b/index.html
@@ -32,5 +32,70 @@
             <button>Read more</button>
         </div>
     </div>
+    <div class="section-three">
+        <div class="box one">
+            <div class="iconbox"><i class="fa-solid fa-circle-info"></i></i></div>
+            <div class="heading">MISSION</div>
+            <div class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione repudiandae mollitia ea id sint veritatis.</div>
+        </div>
+        <div class="box two">
+            <div class="iconbox"><i class="fa-solid fa-circle-info"></i></i></div>
+            <div class="heading">VISSION</div>
+            <div class="description">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Neque suscipit ut, adipisci recusandae eligendi voluptate.</div>
+        </div>
+        <div class="box three">
+            <div class="iconbox"><i class="fa-solid fa-circle-info"></i></div>
+            <div class="heading">VALUES</div>
+            <div class="description">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nesciunt odit assumenda molestiae at ipsum ut?</div>
+        </div>
+    </div>
+    <section class="section-four">
+        <h2>POPULAR LOCATIONS</h2>
+        <div class="image-grid">
+            <img src="./assests/images/pic-7.jpg">
+            <img src="./assests/images/pic-7.jpg">
+            <img src="./assests/images/pic-7.jpg">
+            <img src="./assests/images/pic-7.jpg">
+            <img src="./assests/images/pic-7.jpg">
+            <img src="./assests/images/pic-7.jpg">
+        </div>
+        <button>View More</button>
+    </section>
+    <section class="section-five">
+        <h2>TESTIMONIES</h2>
+        <div class="sub-c">
+            <img src="./assests/images/pic-5-croped.jpg">
+            <div class="section-five-writeup">
+                <h4>"Lorem ipsum..."</h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex, mollitia saepe sunt ducimus aliquid voluptatibus reiciendis explicabo adipisci. Eos porro nesciunt repudiandae possimus? Architecto, laudantium libero? Quas ullam nesciunt culpa, officia quae, repudiandae error expedita tempore accusantium ea aliquam vel laboriosam beatae? Voluptates ratione quis aliquam dicta magnam!    -<em>Fareeda</em>
+                </p>
+            </div>
+        </div>
+        <div class="sub-c">
+            <div class="section-five-writeup">
+                <h4>"Lorem ipsum..."</h4>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Animi obcaecati necessitatibus eaque, rerum hic aperiam eligendi vitae, placeat quos minus, repudiandae autem quidem fuga repellendus expedita nemo beatae. Provident quidem et, quisquam distinctio aspernatur optio. Inventore maiores fugit beatae ipsam. Perspiciatis quasi ullam neque rerum incidunt amet sunt odio nesciunt quisquam, reiciendis consequuntur nemo similique! 
+                    -<em>Maryam</em>
+                </p>
+            </div>
+            <img src="./assests/images/pic-5-croped.jpg">
+        </div>
+    </section>
+    <section class="contact-us-section">
+        <h4>CONTACT US</h4>
+        <div class="section-six">
+            <div class="information">
+                <a href="tel:08094736119">08094736119</a><br>
+                <a href="#">maryamshuaib485@gmail.com</a><br>
+                <a href="mailto:maryamshuaib485@gmail">Block 5 opposite danjam,Abuja</a>
+            </div>
+            <form class="contact_form_home">
+                <input type="text" placeholder="Name"><br>
+                <input type="text" placeholder="Email"><br>
+                <textarea placeholder="Message"></textarea><br>
+                <button>SUBMIT</button>
+            </form>
+        </div>
+    </section>
 </body>
 </html>
