--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             <div>SERVICES</div>
             <div class="contact-us">CONTACT US</div>
         </div>
+        <i class="fa-solid fa-bars hamburger_button"></i>
     </nav>
     <div class="banner-section">
         <div class="writeup-one">EXPLORE THE WORLD!!</div>
@@ -92,10 +93,49 @@
             <form class="contact_form_home">
                 <input type="text" placeholder="Name"><br>
                 <input type="text" placeholder="Email"><br>
-                <textarea placeholder="Message"></textarea><br>
+                <textarea placeholder="Message" rows="5"></textarea><br>
                 <button>SUBMIT</button>
             </form>
+
+
         </div>
     </section>
+    <footer class="footer">
+        <div>
+            <div class=" footer_logo_icon">
+                <i class="fa-solid fa-plane-circle-check "></i>
+            </div>
+            <div class="footer-icon">
+                <i class="fa-brands fa-facebook fa-2xl"></i>
+                <i class="fa-brands fa-twitter fa-2xl"></i>
+                <i class="fa-brands fa-instagram fa-2xl"></i>
+            </div>
+            <div class="footer_writeup1">
+                <div>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa fugiat facere, tempora animi omnis, recusandae iste ad non modi voluptas, nulla necessitatibus aperiam hic officia. Veritatis error earum debitis incidunt?
+                </div>
+                <a href="tel:08094736119">08094736119</a><br>
+                <a href="#">maryamshuaib485@gmail.com</a><br>
+            </div>
+        </div>
+        <div class="footersub_c">
+           <div>
+                <h3><u>PRICING</u></h3>
+                <a href="#">Overview</a>
+                <a href="#">Premium plans</a>
+                <a href="#">Affiliate Program</a>
+                <a href="#">Promotions</a>
+                <a href="#">Application</a>
+           </div>
+           <div>
+                <h3><u>RESOURCES</u></h3>
+                <a href="#">Blog</a>
+                <a href="#">Documentation</a>
+                <a href="#">Systems</a>
+                <a href="#">FAQ</a>
+                <a href="#">Partnerships</a>
+           </div>
+        </div>
+    </footer>
 </body>
 </html>
