--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
             <div>SERVICES</div>
             <div class="contact-us">CONTACT US</div>
         </div>
-        <i class="fa-solid fa-bars hamburger_button"></i>
+        <div class="hamburger_button">
+            <i class="fa-solid fa-bars"></i>
+        </div>
     </nav>
     <div class="banner-section">
         <div class="writeup-one">EXPLORE THE WORLD!!</div>
