--- a/index.html
+++ b/index.html
@@ -136,6 +136,7 @@
                 <a href="#">Partnerships</a>
            </div>
         </div>
+        Maryam Shaibu. All rights reserved.2023
     </footer>
 </body>
 </html>
