mobile responsive changes
updates on mobile and tablet responses

--- a/index.html
+++ b/index.html
@@ -19,9 +19,21 @@
             <div>SERVICES</div>
             <div class="contact-us">CONTACT US</div>
         </div>
-        <div class="hamburger_button">
+        <label class="hamburger_button" for="hamburger_btn">
             <i class="fa-solid fa-bars"></i>
+        </label>
+        <input type="checkbox" id="hamburger_btn" hidden>
+        <div class="sidebar">
+            <label class="sidebar-close_btn" for="hamburger_btn">
+                x
+            </label>
+            <a href="#">HOME</a>
+            <a href="#">ABOUT</a>
+            <a href="#">SERVICES</a>
+            <a href="#">CONTACT US</a>
         </div>
+
+
     </nav>
     <div class="banner-section">
         <div class="writeup-one">EXPLORE THE WORLD!!</div>
@@ -55,33 +67,33 @@
     <section class="section-four">
         <h2>POPULAR LOCATIONS</h2>
         <div class="image-grid">
-            <img src="./assests/images/pic-7.jpg">
-            <img src="./assests/images/pic-7.jpg">
-            <img src="./assests/images/pic-7.jpg">
-            <img src="./assests/images/pic-7.jpg">
-            <img src="./assests/images/pic-7.jpg">
-            <img src="./assests/images/pic-7.jpg">
+            <img src="./assests/images/destination pics/Dubai.jpg">
+            <img src="./assests/images/destination pics/Italy.jpg">
+            <img src="./assests/images/destination pics/Japan.jpg">
+            <img src="./assests/images/destination pics/Rome.jpg">
+            <img src="./assests/images/destination pics/Spain.jpg">
+            <img src="./assests/images/destination pics/Tanzania.jpg">
         </div>
         <button>View More</button>
     </section>
     <section class="section-five">
         <h2>TESTIMONIES</h2>
         <div class="sub-c">
-            <img src="./assests/images/pic-5-croped.jpg">
+            <img src="./assests/images/whitewoman1.jpg">
             <div class="section-five-writeup">
                 <h4>"Lorem ipsum..."</h4>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex, mollitia saepe sunt ducimus aliquid voluptatibus reiciendis explicabo adipisci. Eos porro nesciunt repudiandae possimus? Architecto, laudantium libero? Quas ullam nesciunt culpa, officia quae, repudiandae error expedita tempore accusantium ea aliquam vel laboriosam beatae? Voluptates ratione quis aliquam dicta magnam!    -<em>Fareeda</em>
                 </p>
             </div>
         </div>
-        <div class="sub-c">
+        <div class="sub-c one">
             <div class="section-five-writeup">
                 <h4>"Lorem ipsum..."</h4>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Animi obcaecati necessitatibus eaque, rerum hic aperiam eligendi vitae, placeat quos minus, repudiandae autem quidem fuga repellendus expedita nemo beatae. Provident quidem et, quisquam distinctio aspernatur optio. Inventore maiores fugit beatae ipsam. Perspiciatis quasi ullam neque rerum incidunt amet sunt odio nesciunt quisquam, reiciendis consequuntur nemo similique! 
                     -<em>Maryam</em>
                 </p>
             </div>
-            <img src="./assests/images/pic-5-croped.jpg">
+            <img src="./assests/images/whitewoman2.jpg">
         </div>
     </section>
     <section class="contact-us-section">
