--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./assests/bootstrap-5.3.1-dist/css/bootstrap.min.css" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <link rel="stylesheet" href="./assests/css/style.css">
     <link href="./assests/fontawesome-free-6.4.0-web/css/fontawesome.css" rel="stylesheet">
     <link href="./assests/fontawesome-free-6.4.0-web/css/all.css" rel="stylesheet">
+    
+    <script src="./assests/bootstrap-5.3.1-dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
 </head>
 <body>
     <nav class="nav-top-menu">
@@ -15,9 +18,9 @@
             <i class="fa-solid fa-plane-circle-check"></i>
         </div>
         <div class="menu-uno">
-            <div>ABOUT</div>
+            <div><a class="nav-link" href="/about.html">ABOUT</a></div>
             <div>SERVICES</div>
-            <div class="contact-us">CONTACT US</div>
+            <div type="button" class="contact-us btn btn-danger">CONTACT US </div>
         </div>
         <label class="hamburger_button" for="hamburger_btn">
             <i class="fa-solid fa-bars"></i>
@@ -30,7 +33,7 @@
             <a href="#">HOME</a>
             <a href="#">ABOUT</a>
             <a href="#">SERVICES</a>
-            <a href="#">CONTACT US</a>
+            <a href="#" type="button" class="btn btn-danger">CONTACT US</a>
         </div>
 
 
@@ -44,7 +47,7 @@
             <h4>ABOUT US</h4>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quos quas modi dolore perspiciatis voluptatem excepturi dolor ex in! Ratione veniam, nobis pariatur numquam velit neque?
             </p>
-            <button>Read more</button>
+            <button type="button" class="btn btn-primary">Read more</button>
         </div>
     </div>
     <div class="section-three">
@@ -74,9 +77,9 @@
             <img src="./assests/images/destination pics/Spain.jpg">
             <img src="./assests/images/destination pics/Tanzania.jpg">
         </div>
-        <button>View More</button>
+        <button type="button" class="btn btn-primary">View More</button>
     </section>
-    <section class="section-five">
+    <section class="section-five mt-4">
         <h2>TESTIMONIES</h2>
         <div class="sub-c">
             <img src="./assests/images/whitewoman1.jpg">
@@ -148,7 +151,7 @@
                 <a href="#">Partnerships</a>
            </div>
         </div>
-        Maryam Shaibu. All rights reserved.2023
+        ©Maryam Shaibu. All rights reserved.2023
     </footer>
 </body>
 </html>
