--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 x
             </label>
             <a href="#">HOME</a>
-            <a href="#">ABOUT</a>
+            <a href="/about.html">ABOUT</a>
             <a href="#">SERVICES</a>
             <a href="#" type="button" class="btn btn-danger">CONTACT US</a>
         </div>
