--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <i class="fa-solid fa-plane-circle-check"></i>
         </div>
         <div class="menu-uno">
-            <div><a class="nav-link" href="/about.html">ABOUT</a></div>
+            <div><a class="nav-link" href="about.html">ABOUT</a></div>
             <div>SERVICES</div>
             <div type="button" class="contact-us btn btn-danger">CONTACT US </div>
         </div>
@@ -31,7 +31,7 @@
                 x
             </label>
             <a href="#">HOME</a>
-            <a href="/about.html">ABOUT</a>
+            <a href="about.html">ABOUT</a>
             <a href="#">SERVICES</a>
             <a href="#" type="button" class="btn btn-danger">CONTACT US</a>
         </div>
