--- a/about.html
+++ b/about.html
@@ -76,22 +76,60 @@
                 </p>
             </div>
           </div>
-          <div class="section-three">
-            <div class="box one">
-                <a class="icon-link"><i class="fa-solid fa-trophy"></i></a>
-                <div class="description">578</div>
-                <div class="description fs-6">AWARDS WON</div>
+          <div class="section-thre gap-0 row">
+            <div class="box one rounded-0 col-4">
+              <div class="section-three row  gap-0">
+                <div class="col-3">
+                  <a class="icon-link"><i class="fa-solid fa-trophy" style="font-size: 3rem"></i></a>
+                </div>
+                <div class="col-9">
+                  <div class="description">578</div>
+                  <div class="description fs-6">AWARDS WON</div>
+                </div>
+              </div>
             </div>
-            <div class="box two">
-                <a class="icon-link"><i class="fa-solid fa-flask"></i></a>
-                <div class="description">1200</div>
-                <div class="description fs-6">DESIGN EXPERIMENTS</div>
+            <div class="box two rounded-0  col-4">
+              <div class=" section-three row">
+                <div class="col-3">
+                  <a class="icon-link"><i class="fa-solid fa-flask" style="font-size: 3rem"></i></a>
+                </div>
+                <div class="col-9">
+                  <div class="description">1200</div>
+                  <div class="description fs-6">DESIGN EXPERIMENTS</div>
+                </div>
+              </div>
             </div>
-            <div class="box three">
-                <a class="icon-link"><i class="fa-solid fa-envelope"></i></a>
-                <div class="description">12489</div>
-                <div class="description fs-6">MESSAGES SENT</div>
+            <div class="box three rounded-0  col-4">
+              <div class="section-three row">
+                <div class="col-3">
+                  <a class="icon-link"><i class="fa-solid fa-envelope" style="font-size: 3rem"></i></a>
+                </div>
+                <div class="col-9">
+                  <div class="description">12489</div>
+                  <div class="description fs-6">MESSAGES SENT</div>
+                </div>
+              </div>
             </div>
+            <section class="section-four">
+              <h2 class="pt-4">MEET OUR TEAM</h2>
+              <div class="image-grid row text-center">
+                <div class="col">
+                  <img src="./assests/images/our team1.jpg" class="rounded float-start">
+                  <h4>SYDNEY CROFER</h4>
+                  <p class="fs-5">Creative Director</p>
+                </div>
+                <div class="col">
+                  <img src="./assests/images/our team2.jpg" class="rounded float-start">
+                  <h4>ZENDAYA COLEMAN</h4>
+                  <p class="fs-5">Engineer</p>
+                </div>
+                <div class="col">
+                  <img src="./assests/images/our team2.jpg" class="rounded float-start">
+                  <h4>MARYAM SHAIBU</h4>
+                  <p class="fs-5">Customer Service</p>
+                </div>
+              </div>
+            </section>
         
     
 
