--- a/index.html
+++ b/index.html
@@ -36,6 +36,39 @@
             <a href="#" type="button" class="btn btn-danger">CONTACT US</a>
         </div>
     </nav>
+
+
+<!-- bootstrap navbar menu -->
+
+
+<!-- <nav class="navbar navbar-expand-lg bg-body-tertiary nav-top-menu">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="index.html"><div class="icon-logo">
+        <i class="fa-solid fa-plane-circle-check"></i>
+    </div></a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="about.html">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Services</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link contact-us btn btn-danger" type="button" aria-disabled="true">Contact</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav> -->
+
+
     <div class="banner-section">
         <div class="writeup-one">EXPLORE THE WORLD!!</div>
     </div>
