--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         </div>
         <div class="menu-uno">
             <div><a class="nav-link" href="about.html">ABOUT</a></div>
-            <div>SERVICES</div>
-            <div type="button" class="contact-us btn btn-danger">CONTACT US </div>
+            <div><a class="nav-link" href="service.html">SERVICES</a></div>
+            <div type="button" class="contact-us btn btn-danger"><a class="nav-link" href="#contact">CONTACT US</a></div>
         </div>
         <label class="hamburger_button" for="hamburger_btn">
             <i class="fa-solid fa-bars"></i>
@@ -30,10 +30,10 @@
             <label class="sidebar-close_btn" for="hamburger_btn">
                 x
             </label>
-            <a href="#">HOME</a>
+            <a href="index.html">HOME</a>
             <a href="about.html">ABOUT</a>
-            <a href="#">SERVICES</a>
-            <a href="#" type="button" class="btn btn-danger">CONTACT US</a>
+            <a href="service.html">SERVICES</a>
+            <a href="#contact" type="button" class="btn btn-danger">CONTACT US</a>
         </div>
     </nav>
 
@@ -130,7 +130,7 @@
             <img src="./assests/images/whitewoman2.jpg">
         </div>
     </section>
-    <section class="contact-us-section">
+    <section class="contact-us-section" id="contact">
         <h4>CONTACT US</h4>
         <div class="section-six">
             <div class="information">
