--- a/about.html
+++ b/about.html
@@ -51,13 +51,13 @@
                 <a class="nav-link" aria-current="page" href="index.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="#">About</a>
+                <a class="nav-link active" href="about.html">About</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Services</a>
+                <a class="nav-link" href="service.html">Services</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link contact-us btn btn-danger" type="button" aria-disabled="true">Contact</a>
+                <a class="nav-link contact-us btn btn-danger" href="#contact" type="button" aria-disabled="true">Contact</a>
               </li>
             </ul>
           </div>
@@ -76,8 +76,8 @@
                 </p>
             </div>
           </div>
-          <div class="section-thre gap-0 row">
-            <div class="box one rounded-0 col-4">
+          <div class="section-three gap-0 row">
+            <div class="box one rounded-0 col">
               <div class="section-three row  gap-0">
                 <div class="col-3">
                   <a class="icon-link"><i class="fa-solid fa-trophy" style="font-size: 3rem"></i></a>
@@ -88,7 +88,7 @@
                 </div>
               </div>
             </div>
-            <div class="box two rounded-0  col-4">
+            <div class="box two rounded-0  col">
               <div class=" section-three row">
                 <div class="col-3">
                   <a class="icon-link"><i class="fa-solid fa-flask" style="font-size: 3rem"></i></a>
@@ -99,7 +99,7 @@
                 </div>
               </div>
             </div>
-            <div class="box three rounded-0  col-4">
+            <div class="box three rounded-0  col">
               <div class="section-three row">
                 <div class="col-3">
                   <a class="icon-link"><i class="fa-solid fa-envelope" style="font-size: 3rem"></i></a>
@@ -110,6 +110,7 @@
                 </div>
               </div>
             </div>
+          </div>
             <section class="section-four">
               <h2 class="pt-4">MEET OUR TEAM</h2>
               <div class="image-grid row text-center">
@@ -130,6 +131,60 @@
                 </div>
               </div>
             </section>
+            <section class="contact-us-section" id="contact">
+              <h4>CONTACT US</h4>
+              <div class="section-six">
+                  <div class="information">
+                      <a href="tel:08094736119">08094736119</a><br>
+                      <a href="#">maryamshuaib485@gmail.com</a><br>
+                      <a href="mailto:maryamshuaib485@gmail">Block 5 opposite danjam,Abuja</a>
+                  </div>
+                  <form class="contact_form_home">
+                      <input type="text" placeholder="Name"><br>
+                      <input type="text" placeholder="Email"><br>
+                      <textarea placeholder="Message" rows="5"></textarea><br>
+                      <button>SUBMIT</button>
+                  </form>
+              </div>
+          </section>
+            <footer class="footer">
+              <div>
+                  <div class=" footer_logo_icon">
+                      <i class="fa-solid fa-plane-circle-check "></i>
+                  </div>
+                  <div class="footer-icon">
+                      <i class="fa-brands fa-facebook fa-2xl"></i>
+                      <i class="fa-brands fa-twitter fa-2xl"></i>
+                      <i class="fa-brands fa-instagram fa-2xl"></i>
+                  </div>
+                  <div class="footer_writeup1">
+                      <div>
+                          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa fugiat facere, tempora animi omnis, recusandae iste ad non modi voluptas, nulla necessitatibus aperiam hic officia. Veritatis error earum debitis incidunt?
+                      </div>
+                      <a href="tel:08094736119">08094736119</a><br>
+                      <a href="#">maryamshuaib485@gmail.com</a><br>
+                  </div>
+              </div>
+              <div class="footersub_c">
+                 <div>
+                      <h3><u>PRICING</u></h3>
+                      <a href="#">Overview</a>
+                      <a href="#">Premium plans</a>
+                      <a href="#">Affiliate Program</a>
+                      <a href="#">Promotions</a>
+                      <a href="#">Application</a>
+                 </div>
+                 <div>
+                      <h3><u>RESOURCES</u></h3>
+                      <a href="#">Blog</a>
+                      <a href="#">Documentation</a>
+                      <a href="#">Systems</a>
+                      <a href="#">FAQ</a>
+                      <a href="#">Partnerships</a>
+                 </div>
+              </div>
+              ©Maryam Shaibu. All rights reserved.2023
+          </footer>
         
     
 
